fix(frontend): horizontal sliders in Ecchi on mobile

--- a/frontend/styles/Slideshow.module.css
+++ b/frontend/styles/Slideshow.module.css
@@ -1,11 +1,24 @@
 @media screen and (max-width: 640px) {
-  .forceAspectRatio {
-    aspect-ratio: 6/10;
+  .landscapeMobile {
+    aspect-ratio: 16/9;
+  }
+
+  .portrait {
+    aspect-ratio: 15/20;
+  }
+
+  .landscape {
+    aspect-ratio: 16/9;
+    max-width: 100%;
   }
 }
 
-@media screen and (max-width: 960px) {
-  .forceAspectRatio {
+@media screen and (max-width: 960px) and (min-width: 640px) {
+  .portrait {
     aspect-ratio: 3/5;
+  }
+
+  .landscape {
+    aspect-ratio: 5/3;
   }
 }
